--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -47,8 +47,8 @@
                     <div class="col-md-8 margin-right-30">
                             <div class="col-md-4">
 
-                                    <input type="radio" name="gender" ng-model="reg.gender" value="male" ng-model="candidate.gender"
-                                           checked> Male </input>
+                                    <input type="radio" name="gender" ng-model="reg.gender" value="male" ng-model="reg.gender"
+                                           > Male </input>
                             </div>
                             <div class="col-md-4">
 
