--- a/src/app/toolbar/login/loginToolbar.html
+++ b/src/app/toolbar/login/loginToolbar.html
@@ -7,6 +7,12 @@
             <a href="index.html">
                 <img src="/assets/img/logo.png" alt="logo" class="logo-default"/> </a>
 </span>
+
+             <span class="pull-right" style="margin-right:10%;line-height: 40px">
+            <a href="index.html" ng-click="vm.open()" style="color:white">
+                Login</a>
+</span>
+
         </div>
 
     </div>
