--- a/src/app/toolbar/login/loginToolbar.html
+++ b/src/app/toolbar/login/loginToolbar.html
@@ -10,7 +10,7 @@
 
              <span class="pull-right" style="margin-right:10%;line-height: 40px">
             <a href="index.html" ng-click="vm.open()" style="color:white">
-                Login</a>
+               <i class="icon-user"></i> &nbsp;<b>Login</b></a>
 </span>
 
         </div>
