--- a/src/app/toolbar/login/loginToolbar.html
+++ b/src/app/toolbar/login/loginToolbar.html
@@ -9,7 +9,7 @@
 </span>
 
              <span class="pull-right" style="margin-right:10%;line-height: 40px">
-            <a href="index.html" ng-click="vm.open()" style="color:white">
+            <a style="text-decoration: none;color:white" href="index.html" ng-click="vm.open()" >
                <i class="icon-user"></i> &nbsp;<b>Login</b></a>
 </span>
 
