--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -157,7 +157,7 @@
                                    data-hover="dropdown" data-close-others="true">
                                     <!--<span class="username username-hide-on-mobile"> Doe </span>-->
                                     <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
-                                    <img alt="" class="img-circle" src="../assets/img/avatar9.jpg"/> </a>
+                                    <img alt="" class="img-circle" ng-src="{{image_url}}"/> </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
                                         <a ui-sref="profile">
