--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -10,7 +10,7 @@
             </div>
 
         </div>
-        <div class="portlet-body form">
+        <div class="portlet-body form" style="padding: 20px">
             <!-- BEGIN FORM-->
             <form name="regForm" class="form-horizontal  ">
                 <br>
@@ -19,7 +19,7 @@
                     {{message}}
                 </div>
 
-                <div class="form-group">
+                <div class="form-group padding-20">
                     <label class="col-md-3 control-label text-left">PROFILE FOR</label>
 
                     <div class="col-md-8">
