--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -1,131 +1,143 @@
 <div class="page-content-wrapper">
-	<!-- BEGIN CONTENT BODY -->
-	<div class="page-content">
-		<!-- BEGIN PAGE HEAD-->
-		<div class="page-head">
+    <!-- BEGIN CONTENT BODY -->
+    <div class="page-content">
+        <!-- BEGIN PAGE HEAD-->
+        <div class="page-head">
 
-			<!-- BEGIN PAGE BASE CONTENT -->
+            <!-- BEGIN PAGE BASE CONTENT -->
 
-			<div class="row">
-				<div class="col-md-12 text-right">
-					<dir-pagination-controls
-							max-size="5"
-							direction-links="true"
-							boundary-links="true" >
-					</dir-pagination-controls>
-				</div>
-				<div class="col-md-12 ">
-					<div class="portlet light  border-rounded ">
-						<div class="portlet-title " style="border-bottom: 0px">
-							<div class="caption green" style="font-size: 12px">
-								<span> <input class="filter-check-box" type="checkbox"/>Select All</span>&nbsp; | &nbsp;
-								<span> Delete</span>
-							</div>
-							<div class="actions">
-								<div class="btn-group">
-									<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-										<i class="fa fa-filter"></i>
-									</a>
-									<!--<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
-										<i class="fa fa-map"></i> </a>-->
-									<ul class="dropdown-menu pull-right">
-										<li>
-											<a href="javascript:;">
-												<i class="fa fa-pencil"></i> Edit </a>
-										</li>
-										<li>
-											<a href="javascript:;">
-												<i class="fa fa-trash-o"></i> Delete </a>
-										</li>
-										<li>
-											<a href="javascript:;">
-												<i class="fa fa-ban"></i> Ban </a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="javascript:;"> Make admin </a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+            <div class="row">
 
+                <div class="col-md-12 ">
+                    <div class="portlet light  border-rounded ">
+                        <div class="portlet-title " style="border-bottom: 0px">
+                            <div class="caption green" style="font-size: 12px">
+                                <span> <input class="filter-check-box" type="checkbox"/>Select All</span>&nbsp; | &nbsp;
+                                <span> Delete</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red dropdown-toggle" href="javascript:;"
+                                       data-toggle="dropdown">
+                                        <i class="fa fa-filter"></i>
+                                    </a>
+                                    <!--<a class="btn btn-sm red dropdown-toggle" href="javascript:;" data-toggle="dropdown">
+                                        <i class="fa fa-map"></i> </a>-->
+                                    <ul class="dropdown-menu pull-right">
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-pencil"></i> Edit </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-trash-o"></i> Delete </a>
+                                        </li>
+                                        <li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-ban"></i> Ban </a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li>
+                                            <a href="javascript:;"> Make admin </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div ng-if="accept.length == 0" class="portlet light  border-rounded ">
+                        <div class="alert alert-success">
+                            No results found
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 text-right">
+                    <dir-pagination-controls
+                            max-size="5"
+                            direction-links="true"
+                            boundary-links="true">
+                    </dir-pagination-controls>
+                </div>
 
-
-
-			</div>
+            </div>
 			            <span dir-paginate="item in accept|itemsPerPage:5">
 
 			<div class="portlet light  border-rounded">
 
-				<div class="portlet-body form">
+                <div class="portlet-body form">
 
-					<div class="col-md-3">
-						<div class="row">
-							<div class="col-md-2"><input type="checkbox" class="filter-check-box" ></div>
-							<div class="col-md-10">
+                    <div class="col-md-3">
+                        <div class="row">
+                            <div class="col-md-2"><input type="checkbox" class="filter-check-box"></div>
+                            <div class="col-md-10">
 
-								<img ng-if="item.user.gender == 'female'"style="height: 100%;width: 100%"
-									 ng-src="../assets/defaultImages/female_card.jpg"/>
-								<img ng-if="item.user.gender == 'male'"style="height: 100%;width: 100%"
-									 ng-src="../assets/defaultImages/male_card.jpg"/>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-9">
-						<div class="row">
+                                <img ng-if="item.user.gender == 'female'" style="height: 100%;width: 100%"
+                                     ng-src="../assets/defaultImages/female_card.jpg"/>
+                                <img ng-if="item.user.gender == 'male'" style="height: 100%;width: 100%"
+                                     ng-src="../assets/defaultImages/male_card.jpg"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row">
 
-							<div class="col-md-5"><label class="message-name-text">{{item.user.name}}</label> &nbsp;<label
-									class="style-cls">({{item.user.id_people}})</label></div>
-							<div ng-if="item.user.isOnline = 'online'" class="col-md-4"><i class="fa fa-circle " style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label>
-							</div>
-							<div class="col-md-3 pull-right"><label class="style-cls">{{item.date}}</label><i
-									class="fa fa-trash  pull-right style-cls " ng-click="deleteAccept(item.com_id)" style="padding-top:5px;"></i></div>
-						</div>
-						<div class="row">
-							<div class="col-md-12 details-style">
-								{{item.user.age}} Yrs, {{item.user.height}}cms, {{item.user.mothertongue}}, {{item.user.religion}}, {{item.user.caste}},{{item.user.education}}, {{item.user.occupation}},
-								{{item.user.city_name}}, {{item.user.state_name}}, {{item.user.country_name}}.
-							</div>
+                            <div class="col-md-5"><label class="message-name-text">{{item.user.name}}</label>
+                                &nbsp;<label
+                                        class="style-cls">({{item.user.id_people}})</label></div>
+                            <div ng-if="item.user.isOnline = 'online'" class="col-md-4"><i class="fa fa-circle "
+                                                                                           style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label>
+                            </div>
+                            <div class="col-md-3 pull-right"><label class="style-cls">{{item.date}}</label><i
+                                    class="fa fa-trash  pull-right style-cls " ng-click="deleteAccept(item.com_id)"
+                                    style="padding-top:5px;"></i></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 details-style">
+                                {{item.user.age}} Yrs, {{item.user.height}}cms, {{item.user.mothertongue}},
+                                {{item.user.religion}}, {{item.user.caste}},{{item.user.education}},
+                                {{item.user.occupation}},
+                                {{item.user.city_name}}, {{item.user.state_name}}, {{item.user.country_name}}.
+                            </div>
 
-						</div>
-						<hr>
-						<div class="row">
-							<div class="col-md-12 notification-style uppercase">INTEREST SENT</div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-12 notification-style uppercase">INTEREST SENT</div>
 
-							<div class="col-md-12 notification-details">{{item.content}}</div>
-						</div>
-						<div class="row margin-top-10">
-							<div class="col-md-12">
-								<button type="button" class=" uppercase btn red input-rounded" ng-click="">
-									Call Now
-								</button>
-								&nbsp;
-								<button disabled="item.user.interest == 'sent'" type="button" class=" uppercase btn btn-default input-rounded" ng-click="">
-									Send Interest
-								</button>
+                            <div class="col-md-12 notification-details">{{item.content}}</div>
+                        </div>
+                        <div class="row margin-top-10">
+                            <div class="col-md-12">
+                                <button type="button" class=" uppercase btn red input-rounded" ng-click="">
+                                    Call Now
+                                </button>
+                                &nbsp;
+                                <button disabled="item.user.interest == 'sent'" type="button"
+                                        class=" uppercase btn btn-default input-rounded" ng-click="">
+                                    Send Interest
+                                </button>
 
-							</div>
-						</div>
-					</div>
+                            </div>
+                        </div>
+                    </div>
 
-					<div class="row">
+                    <div class="row">
 
-					</div>
-				</div>
-			</div>
+                    </div>
+                </div>
+            </div>
 
 </span>
 
-			<div class="col-md-12 text-right">
-				<dir-pagination-controls
-						max-size="5"
-						direction-links="true"
-						boundary-links="true" >
-				</dir-pagination-controls>
-			</div>
+            <div class="col-md-12 text-right">
+                <dir-pagination-controls
+                        max-size="5"
+                        direction-links="true"
+                        boundary-links="true">
+                </dir-pagination-controls>
+            </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
