--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                        <div  ng-if="matches.length == 0" class="portlet light  border-rounded ">
+                        <div  ng-if="showResult" class="portlet light  border-rounded ">
                             <div class="alert alert-success">
                                 No results found
                             </div>
