--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -25,8 +25,10 @@
                         </div>
                     </div>
                     <div class="row" style="margin-top: 20px">
-                        <div class="col-md-8">9876543212</div>
-                        <div class="col-md-4" style="font-size: 9px"><i class="fa fa-check " style="color: green"> </i> verified
+                        <div class="col-md-8">{{profile.login_user.mobile}}</div>
+                        <div class="col-md-4" style="font-size: 9px">
+                            <span ng-if="profile.login_user.validation_status != 'unvalidated'"><i class="fa fa-check " style="color: green"> </i> verified</span>
+                            <span ng-if="profile.login_user.validation_status == 'unvalidated'"><i class="fa fa-remove " style="color: red"> </i> Not verified</span>
                         </div>
                     </div>
                 </div>
